--- a/src/components/common/textneon/TextNeon.css
+++ b/src/components/common/textneon/TextNeon.css
@@ -45,15 +45,15 @@
 }
 
 .clipneon {
-  color: #A9FFDC;
+  color: #ffa9a9;
   font-family: clipneon;
   /* font-size: 1vw; */
   text-shadow: 
-  -.1vw 0vw .25vw #A9FFDC, -.2vw 0vw .25vw #A9FFDC, -.4vw 0vw .25vw #A9FFDC, 
-  -.1vw 0vw .1vw #00CC2A, -.2vw 0vw .1vw #00CC2A, -.4vw 0vw .1vw #00CC2A,
-  -.1vw 0vw .8vw #00CC2A, -.2vw 0vw .8vw #00CC2A, -.4vw 0vw .8vw #00CC2A, .2vw 0vw .5vw #00CC2A,
-  -.1vw 0vw .5vw #00CC2A, -.2vw 0vw .5vw #00CC2A, -.4vw 0vw .5vw #00CC2A, 
-  -.1vw 0vw 10vw #16FA19, -.2vw 0vw 10vw #16FA19, -.4vw 0vw 10vw #16FA19;
+  -.1vw 0vw .25vw #ffa9a9, -.2vw 0vw .25vw #ffa9a9, -.4vw 0vw .25vw #ffa9a9,
+  -.1vw 0vw .1vw #cc0000, -.2vw 0vw .1vw #cc0000, -.4vw 0vw .1vw #cc0000,
+  -.1vw 0vw .8vw #cc0000, -.2vw 0vw .8vw #cc0000, -.4vw 0vw .8vw #cc0000, .2vw 0vw .5vw #cc0000,
+  -.1vw 0vw .5vw #cc0000, -.2vw 0vw .5vw #cc0000, -.4vw 0vw .5vw #cc0000, 
+  -.1vw 0vw 10vw #cc0000, -.2vw 0vw 10vw #cc0000, -.4vw 0vw 10vw #cc0000;
 }
 
 .moon {
