--- a/src/components/sectionone/SectionOne.css
+++ b/src/components/sectionone/SectionOne.css
@@ -12,18 +12,21 @@
     #00000f 87.5%,
     #000000 100%
   ); */
+  /* background-image: url(../assets/imgcity/fondcity.jpg);
+  background-repeat: no-repeat;
+  background-size: cover; */
   width: 100%;
   height: 100vh;
 }
 
 .cartel {
-  background-color: #00000050;
+  background-color: #c653fb2a;
   border-radius: 20px;
-  border: 1px solid #913d8b;
-  box-shadow: -0.1vw 0vw 0.2vw #a9ffdc, -0.2vw 0vw 0.25vw #a9ffdc,
-    -0.1vw 0vw 0.2vw #a9ffdc, -0.1vw 0vw 0.1vw #00cccc,
-    -0.1vw 0vw 0.1vw #00cccc, -0.1vw 0vw 0.1vw #00cccc, -0.1vw 0vw 0.3vw #00cccc,
-    -0.1vw 0vw 0.8vw #00cccc, -0.1vw 0vw 0.8vw #00cccc, 0.1vw 0vw 0.3vw #00cccc;
+  border: 1px solid #28D7FE;
+  box-shadow: -0.1vw 0vw 0.2vw #28D7FE, -0.2vw 0vw 0.25vw #28D7FE,
+    -0.1vw 0vw 0.2vw #28D7FE, -0.1vw 0vw 0.1vw #28D7FE,
+    -0.1vw 0vw 0.1vw #1041FF, -0.1vw 0vw 0.1vw #1041FF, -0.1vw 0vw 0.3vw #1041FF,
+    -0.1vw 0vw 0.8vw #1041FF, -0.1vw 0vw 0.8vw #1041FF, 0.1vw 0vw 0.3vw #1041FF;
   padding: 0px 2% 0px 2%;
 }
 
@@ -32,7 +35,7 @@
 
 .estructure {
   width: 100vw;
- position: relative;
- bottom: 0px;
+ /* position: relative; */
+ /* bottom: 0px; */
  /* top: -90vh; */
 }
