--- a/src/components/common/textneon/TextNeon.css
+++ b/src/components/common/textneon/TextNeon.css
@@ -100,3 +100,27 @@
   -.1vw 0vw 3vw #42114E, -.2vw 0vw 3vw #42114E, -.4vw 0vw 3vw #42114E;
   }
 }
+
+.animation-clipneon {
+      animation: flicker 3s infinite alternate;  
+} 
+
+
+/* Flickering animation */
+@keyframes flicker {
+    
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+
+      text-shadow:
+      -.1vw 0vw .25vw #ffa9a9, -.2vw 0vw .25vw #ffa9a9, -.4vw 0vw .25vw #ffa9a9,
+      -.1vw 0vw .1vw #cc0000, -.2vw 0vw .1vw #cc0000, -.4vw 0vw .1vw #cc0000,
+      -.1vw 0vw .8vw #cc0000, -.2vw 0vw .8vw #cc0000, -.4vw 0vw .8vw #cc0000, .2vw 0vw .5vw #cc0000,
+      -.1vw 0vw .5vw #cc0000, -.2vw 0vw .5vw #cc0000, -.4vw 0vw .5vw #cc0000, 
+      -.1vw 0vw 10vw #cc0000, -.2vw 0vw 10vw #cc0000, -.4vw 0vw 10vw #cc0000;
+  }
+  
+  20%, 24%, 55% {        
+      text-shadow: none;
+  }    
+}
+
