--- a/src/components/sectionone/SectionTwo.css
+++ b/src/components/sectionone/SectionTwo.css
@@ -2,7 +2,7 @@
   color: white;
   display: flex;
   flex-wrap: wrap;
-  justify-self: center;
+  justify-content: center;
   align-items: center; 
 }
 
@@ -12,9 +12,9 @@
 }
 
 .subtitle {
-  margin: 2vh;
+  /* margin: 2vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; */
   
 }
 
