--- a/src/components/sectionone/SectionThree.css
+++ b/src/components/sectionone/SectionThree.css
@@ -1,20 +1,31 @@
-.card-proyects-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.card-proyects-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .proyectsTitle {
-    text-align: center;
+  text-align: center;
 }
 
 .card-proyects-items {
-    max-width: 50vw;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+  max-width: 50vw;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
-.card-proyects-title {
-margin: 2vw;
+.card-proyects-item {
+  margin: 2vw;
+}
+
+.card-proyects-a {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.mark {
+  height: 32px;
+  margin: 20px;
 }
