--- a/src/components/sectionone/SectionThree.css
+++ b/src/components/sectionone/SectionThree.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin: 100px;
 }
 
 .proyectsTitle {
@@ -17,6 +18,15 @@
 
 .card-proyects-item {
   margin: 2vw;
+}
+
+.card-proyects-img:hover {
+  -webkit-transform: scale(2);
+  transform: scale(1.3);
+}
+.card-proyects-img-container {
+  overflow: hidden;
+  width: 300px;
 }
 
 .card-proyects-a {
