--- a/src/components/common/MirrorText/MirrorText.css
+++ b/src/components/common/MirrorText/MirrorText.css
@@ -17,7 +17,9 @@
     animation: shake 0.5s linear forwards;
 }
 
-.titleMirror:hover {
+
+
+.shake:hover {
     /* Start the shake animation and make the animation last for 0.5 seconds */
     animation: shake 0.5s;
   
