--- a/src/components/sectionone/SectionThree.css
+++ b/src/components/sectionone/SectionThree.css
@@ -25,8 +25,8 @@
   transform: scale(1.3);
 }
 .card-proyects-img-container {
-  overflow: hidden;
-  width: 300px;
+  /* overflow: hidden;
+  width: 300px; */
 }
 
 .card-proyects-a {
