--- a/src/components/sectionone/SectionTwo.css
+++ b/src/components/sectionone/SectionTwo.css
@@ -30,6 +30,9 @@
   user-select: none;
   /* white-space: nowrap; */
   filter: blur(0.007em);
+}
+
+.shake {
   animation: shake 0.5s linear forwards;
 }
 
@@ -37,7 +40,7 @@
 /* background-color: black; */
 }
 
-.titleMirror:hover {
+.shake:hover {
   /* Start the shake animation and make the animation last for 0.5 seconds */
   animation: shake 0.5s;
 
