--- a/src/components/sectionone/SectionTwo.css
+++ b/src/components/sectionone/SectionTwo.css
@@ -31,6 +31,40 @@
   /* white-space: nowrap; */
   filter: blur(0.007em);
 }
+/* #d651a6 */
+.marg {
+  margin: 40px
+}
+.fill {
+  color: #fff;
+  text-decoration:none;
+  font-weight: 900;
+  letter-spacing: 1px;
+  padding: 13px 50px 13px;
+  outline: 0;
+  /* text-shadow: 0 0 0.15em #1da9cc; */
+  border: 1px solid rgb(118, 243, 252);
+  cursor: pointer;
+  position: relative;
+  /* background-color: rgba(207, 38, 38, 0); */
+}
+
+.fill::after {
+  content: "";
+  background-color: #1da9cc;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.fill:hover::after {
+  top: 0px;
+  left: 0px;
+}
 
 .shake {
   animation: shake 0.5s linear forwards;
