--- a/src/components/sectionone/SectionTwo.css
+++ b/src/components/sectionone/SectionTwo.css
@@ -1,13 +1,13 @@
 .contain-section-two {
   color: white;
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center; 
+  justify-content: right;
+  align-items: center;  */
 }
 
 .title {
-  margin: 2vh;
+  /* margin: 2vh; */
   text-transform: uppercase;
 }
 
@@ -22,7 +22,8 @@
   /* position: relative; */
   /* font-family: 'Montserrat', Arial, sans-serif; */
   /* font-size: calc(20px + 5vw); */
-  max-width: 20vw;
+  /* width: 100%; */
+
   font-weight: 700;
   color: #fff;
   letter-spacing: 0.02em;
@@ -71,7 +72,7 @@
 }
 
 .bkg-text-stwo {
-/* background-color: black; */
+max-width: 450px;
 }
 
 .shake:hover {
