--- a/src/components/sectionone/SectionOne.css
+++ b/src/components/sectionone/SectionOne.css
@@ -19,6 +19,16 @@
   height: 100vh;
 }
 
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .sectionOne {
+    width: 100%;
+  }
+  .cartel {
+    width: 80%;
+  }
+}
+
 .cartel {
   background-color: #c653fb2a;
   border-radius: 20px;
