--- a/src/components/sectionone/SectionThree.css
+++ b/src/components/sectionone/SectionThree.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 100px;
+  /* margin: 100px; */
 }
 
 .proyectsTitle {
