--- a/src/components/common/cardpage/CardPhoto.css
+++ b/src/components/common/cardpage/CardPhoto.css
@@ -46,6 +46,8 @@
 
 .card {
   /* background: black; */
+  background-color: black;
+
   position: relative;
   display: block;
   height: 85%;  
@@ -61,6 +63,7 @@
 
 .card__overlay {
   position: absolute;
+
   bottom: 0;
   left: 0;
   right: 0;
@@ -73,10 +76,14 @@
 
 .card:hover .card__overlay {
   transform: translateY(0);
+  background-color: black;
+
 }
 
 .card__header {
   background: black;
+  background-color: black;
+
   position: relative;
   display: flex;
   align-items: center;
