--- a/src/components/common/bordericon/BorderIcon.css
+++ b/src/components/common/bordericon/BorderIcon.css
@@ -1,7 +1,7 @@
 /* Here's some environment setup,
    scroll down for the interesting parts */
 
-   @import url('https://fonts.googleapis.com/css?family=Lato:200');
+   /* @import url('https://fonts.googleapis.com/css?family=Lato:200'); */
 
 
    .social-icons {
