--- a/src/components/sectionone/IconsSection.css
+++ b/src/components/sectionone/IconsSection.css
@@ -1,11 +1,37 @@
 
 
 
-.icons_sectionthree {
+/* .icons_sectionthree {
   
-  /* border-radius: 50%; */
     background: -webkit-linear-gradient(45deg, #ff003c, #0575e6);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
+  } */
+
+
+  .icons_sectionthree {
+    /* font-family: "Montserrat"; */
+    text-align: center;
+    color: #FFF;
+    display: flex;
+    /* flex-direction: column; */
+    /* align-items: center; */
+    justify-content: center;
+    /* height: 100vh; */
+    /* letter-spacing: 1px; */
   }
+  
+  .icons_sectionthree {
+    /* background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif); */
+    background-size: cover;
+    color: transparent;
+    -moz-background-clip: text;
+    -webkit-background-clip: text;
+    text-transform: uppercase;
+    font-size: 120px;
+    line-height: .75;
+    margin: 10px 0;
+  }
+
+  
