--- a/src/components/sectionone/IconsSection.css
+++ b/src/components/sectionone/IconsSection.css
@@ -1,13 +1,13 @@
 
 
 
-/* .icons_sectionthree {
+.icons_sectionthree {
   
     background: -webkit-linear-gradient(45deg, #ff003c, #0575e6);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
-  } */
+  }
 
 
   .icons_sectionthree {
