--- a/src/components/common/MirrorText/MirrorText.css
+++ b/src/components/common/MirrorText/MirrorText.css
@@ -1,32 +1,32 @@
-.containerMirror {
+/* .containerMirror { */
     /* overflow: hidden; */
-}
+/* } */
 
- .titleMirror {
+ /* .titleMirror { */
     /* position: relative; */
-    font-family: 'Montserrat', Arial, sans-serif;
+    /* font-family: 'Montserrat', Arial, sans-serif; */
     /* font-size: calc(20px + 5vw); */
-    font-weight: 700;
+    /* font-weight: 700;
     color: #fff;
     letter-spacing: 0.02em;
     text-transform: uppercase;
     text-shadow: 0 0 0.15em #1da9cc;
     user-select: none;
     white-space: nowrap;
-    filter: blur(0.007em);
-    animation: shake 0.5s linear forwards;
-}
+    filter: blur(0.007em); */
+    /* animation: shake 0.5s linear forwards; */
+/* } */
 
 
 
-.shake:hover {
+/* .shake:hover { */
     /* Start the shake animation and make the animation last for 0.5 seconds */
-    animation: shake 0.5s;
+    /* animation: shake 0.5s; */
   
     /* When the animation is finished, start again */
-    animation-iteration-count: infinite;
-  }
-  
+    /* animation-iteration-count: infinite; */
+  /* } */
+/*   
   @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
     10% { transform: translate(-1px, -2px) rotate(-1deg); }
@@ -39,7 +39,7 @@
     80% { transform: translate(-1px, -1px) rotate(1deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
-  }
+  } */
 /*
 textMirror {
     position: absolute;
