--- a/src/components/common/cardpage/CardPhoto.css
+++ b/src/components/common/cardpage/CardPhoto.css
@@ -1,5 +1,5 @@
 .containercard {
-  margin-top: '100px';
+  margin-top: 100px;
   position: absolute;
   width: 100vw;
   height: 100vh;
@@ -10,20 +10,26 @@
   touch-action: none;
 }
 
-
 .animatedcard {
   background-color: white;
   background-size: auto 85%;
   background-repeat: no-repeat;
   background-position: center center;
   width: 45vh;
-  max-width: 300px;
+  max-width: 340px;
   height: 85vh;
   max-height: 570px;
   will-change: transform;
   border-radius: 10px;
   box-shadow: 0 12.5px 100px -10px rgba(94, 94, 204, 0.4),
     0 10px 10px -10px rgba(238, 104, 160, 0.452);
+}
+
+@media only screen and (max-width: 432px) {
+  .animatedcard {
+    max-width: 250px;
+    height: 65vh;
+  }
 }
 
 .containertextcard {
@@ -34,8 +40,6 @@
   justify-content: center;
   align-items: center;
 }
-
-
 
 .cards {
   display: grid;
@@ -52,34 +56,33 @@
 
   position: relative;
   display: block;
-  height: 85%;  
+  height: 85%;
   border-radius: calc(var(--curve) * 1px);
   overflow: hidden;
   text-decoration: none;
 }
 
-.card__image {    
+.card__image {
   width: 500px;
   height: auto;
 }
 
 .card__overlay {
   position: absolute;
-    bottom: 0;
+  bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;      
-  border-radius: calc(var(--curve) * 1px);    
+  z-index: 1;
+  border-radius: calc(var(--curve) * 1px);
   border-top-left-radius: 45px;
-  background-color: var(--surface-color);      
+  background-color: var(--surface-color);
   transform: translateY(100%);
-  transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
 .card:hover .card__overlay {
   transform: translateY(0);
   background-color: black;
-
 }
 
 .card__header {
@@ -91,10 +94,10 @@
   align-items: center;
   gap: 2em;
   padding: 2em;
-  border-radius: calc(var(--curve) * 1px) 0 0 0;    
+  border-radius: calc(var(--curve) * 1px) 0 0 0;
   background-color: var(--surface-color);
   transform: translateY(-100%);
-  transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
 .card__arc {
@@ -102,14 +105,14 @@
   height: 80px;
   position: absolute;
   bottom: 100%;
-  right: 0;      
+  right: 0;
   z-index: 1;
 }
 
 .card__arc path {
   fill: var(--surface-color);
   d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
-}       
+}
 
 .card:hover .card__header {
   transform: translateY(0);
@@ -118,8 +121,8 @@
 .card__thumb {
   flex-shrink: 0;
   width: 50px;
-  height: 50px;      
-  border-radius: 50%;      
+  height: 50px;
+  border-radius: 50%;
 }
 
 .card__title {
@@ -127,31 +130,31 @@
   background-color: black;
   padding: 30px;
   border-radius: 50%;
-  margin: 0 0 .3em;
-  color: #6A515E;
+  margin: 0 0 0.3em;
+  color: #6a515e;
 }
 
 .card__tagline {
   display: block;
   margin: 1em 0;
-  font-family: "MockFlowFont";  
-  font-size: .8em; 
+  font-family: "MockFlowFont";
+  font-size: 0.8em;
   background-size: contain;
-  color: #D7BDCA;  
+  color: #d7bdca;
 }
 
 .card__status {
-  font-size: .8em;
-  color: #D7BDCA;
+  font-size: 0.8em;
+  color: #d7bdca;
 }
 
 .card__description {
   padding: 0 2em 2em;
   margin: 0;
   color: #c7c7c7;
-  font-family: "MockFlowFont";   
+  font-family: "MockFlowFont";
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
   overflow: hidden;
-}    
+}
