--- a/src/components/common/contactform/ContactForm.css
+++ b/src/components/common/contactform/ContactForm.css
@@ -20,12 +20,13 @@
     min-height: 100vh;
   } */
   
-  .container {
-    flex: 0 1 700px;
+  .containerForm {
+    flex: 0px;
     margin: auto;
-    padding: 10px;
+    padding: 0px;
   }
-  
+
+
   .screen {
     position: relative;
     background: #3e3e3e;
@@ -35,11 +36,11 @@
   .screen:after {
     content: '';
     display: block;
-    position: absolute;
+    /* position: absolute;
     top: 0;
     left: 20px;
     right: 20px;
-    bottom: 0;
+    bottom: 0; */
     border-radius: 15px;
     box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
     z-index: -1;
@@ -203,6 +204,11 @@
   }
   
   @media screen and (max-width: 520px) {
+
+    .containerForm {
+      margin: 0px 15px;
+    }
+
     .screen-body {
       flex-direction: column;
     }
@@ -233,4 +239,10 @@
       padding: 0;
     }
   }
+
+  @media (min-width: 600px) { 
+    .containerForm {
+      float: left;
+    }
+   }
   
